<resources>
    <string name="app_name">digitalbanking</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_jul">Jul</string>
    <string name="msg_30_entertainme">30%
Entertainment</string>
    <string name="lbl_user_name">User Name</string>
    <string name="lbl_21_january_2021">21 January 2021</string>
    <string name="lbl_my_balance">My Balance</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_diposit">Diposit</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="msg_there_are_recom">There are recommendation for my account</string>
    <string name="lbl_940">$940</string>
    <string name="lbl_canon">Canon</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_safety">Safety</string>
    <string name="lbl_password2"> Password</string>
    <string name="lbl_160_000">$160,000</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_monthly_revenue">Monthly Revenue</string>
    <string name="lbl_deposit_from_my">Deposit from my</string>
    <string name="lbl_abm_bank">ABM Bank</string>
    <string name="lbl_corporate_loans">Corporate Loans</string>
    <string name="lbl_125_0000">$125,0000</string>
    <string name="lbl_business_loans2">Business Loans</string>
    <string name="lbl_tiktok">Tiktok</string>
    <string name="msg_debit_and_credi">Debit and credit cards</string>
    <string name="msg_expense_statist">Expense Statistics</string>
    <string name="lbl_randy_press">Randy Press</string>
    <string name="lbl_add_card2">+ Add Card</string>
    <string name="lbl_sep">Sep</string>
    <string name="msg_create_your_new">Create your new password to Login</string>
    <string name="lbl_2_5002">+$2,500</string>
    <string name="msg_search_for_some">Search for something</string>
    <string name="lbl_return">Return</string>
    <string name="lbl_500_000">$500,000</string>
    <string name="msg_welcome_to_firstbank">Welcome to FirstBank</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_dbl_bank">DBL Bank</string>
    <string name="lbl_nov2">Nov </string>
    <string name="lbl_ceo">CEO</string>
    <string name="lbl_michael">Michael</string>
    <string name="msg_20_jan_10_40_p">20 Jan, 10.40 PM</string>
    <string name="lbl_5_days_ago">5 days ago</string>
    <string name="lbl_charlene_123">Charlene@123</string>
    <string name="lbl_42">4</string>
    <string name="msg_add_to_apple_pa">Add to Apple Pay</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_samsung_mobile">Samsung Mobile</string>
    <string name="lbl_12_22">12/22</string>
    <string name="lbl_apple_store">Apple Store</string>
    <string name="msg_25_jan_10_40_p">25 Jan, 10.40 PM</string>
    <string name="lbl_800">800</string>
    <string name="lbl_480">$480</string>
    <string name="lbl_1_250">1,250</string>
    <string name="lbl_charlene_reed">Charlene Reed </string>
    <string name="lbl_weekly_activity">Weekly Activity</string>
    <string name="msg_recent_transact">Recent Transaction</string>
    <string name="lbl_personal_loans">Personal Loans</string>
    <string name="lbl_secondary">Secondary</string>
    <string name="lbl_freepik_sales">Freepik Sales</string>
    <string name="lbl_30">30%
</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_35">35%
</string>
    <string name="lbl_32">3</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_40_500">$40,500</string>
    <string name="msg_withdraw_withou">Withdraw without any card</string>
    <string name="lbl_jan">Jan</string>
    <string name="msg_please_enter_your">Please enter your password email address. 
You will receive a link creative a new password 
via email.</string>
    <string name="lbl_user_gmail_com">user@gmail.com </string>
    <string name="msg_create_a_new_account">Create a New Account</string>
    <string name="msg_code_has_been_send">Code has been send to *******2@gmail.com</string>
    <string name="msg_i_send_or_recei">I send or receive digita currency</string>
    <string name="lbl_card_setting">Card Setting</string>
    <string name="lbl_350">$350</string>
    <string name="lbl_director">Director</string>
    <string name="lbl_investment">Investment</string>
    <string name="lbl_expiration_date">Expiration Date</string>
    <string name="lbl_city">City</string>
    <string name="lbl_30_000">$30,000</string>
    <string name="lbl_5_600">$5,600</string>
    <string name="lbl_20">20%
</string>
    <string name="lbl_change_pic_code">Change Pic Code</string>
    <string name="lbl_wilson">Wilson</string>
    <string name="lbl_playstation">Playstation</string>
    <string name="lbl_22">2</string>
    <string name="lbl_designer">Designer</string>
    <string name="lbl_25">+25%</string>
    <string name="lbl_postal_code">Postal Code</string>
    <string name="msg_all_transaction">All Transactions</string>
    <string name="lbl_500">500</string>
    <string name="lbl_valid_thru">VALID THRU</string>
    <string name="msg_14_jan_10_40_p">14 Jan, 10.40 PM</string>
    <string name="msg_spotify_subscri">Spotify Subscription</string>
    <string name="msg_28_jan_12_30_a">28 Jan, 12.30 AM</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="msg_find_the_right_and">Find the right and what you want 
only in Firstbank</string>
    <string name="lbl_brc_bank">BRC Bank</string>
    <string name="lbl_credit">Credit</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_trending_stock">Trending Stock</string>
    <string name="msg_total_invested">Total Invested Amount</string>
    <string name="lbl_2_500">-$2,500</string>
    <string name="lbl_mobile_service">Mobile Service</string>
    <string name="lbl_12_500">$12,500</string>
    <string name="msg_number_of_inves">Number of Investments</string>
    <string name="lbl_12">-12%</string>
    <string name="lbl_10">+10%</string>
    <string name="lbl_16">+16%</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_15">15%
</string>
    <string name="lbl_28_january_2021">28 January 2021</string>
    <string name="msg_buy_think_gro">Buy. Think. Grow</string>
    <string name="lbl_10_000">$10,000</string>
    <string name="lbl_850">-$850</string>
    <string name="lbl_20_investment">20%
Investment</string>
    <string name="msg_enable_or_disab">Enable or disable two factor authentication</string>
    <string name="lbl_left_to_repay">Left to repay</string>
    <string name="lbl_nov">Nov</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_12_750">$12,750</string>
    <string name="lbl_save">Save</string>
    <string name="msg_we_are_your_all">We are your allies</string>
    <string name="lbl_sign_with_apple">Sign With Apple</string>
    <string name="lbl_log_in2">Log In</string>
    <string name="msg_bank_services_l">Bank Services List</string>
    <string name="lbl_01">01.</string>
    <string name="lbl_02">02.</string>
    <string name="lbl_tesla_motors">Tesla Motors</string>
    <string name="lbl_05">05.</string>
    <string name="lbl_06">0</string>
    <string name="lbl_03">03.</string>
    <string name="lbl_04">04.</string>
    <string name="lbl_eddy_cusuma">Eddy Cusuma</string>
    <string name="lbl_aug">Aug</string>
    <string name="lbl_840">+$840</string>
    <string name="msg_add_to_google_p">Add to Google Pay</string>
    <string name="lbl_600">600</string>
    <string name="lbl_security">Security</string>
    <string name="lbl_160">$160</string>
    <string name="lbl_san_jose">San Jose</string>
    <string name="lbl_debit">Debit</string>
    <string name="lbl_your_name">Your Name</string>
    <string name="msg_create_new_password">Create New Password</string>
    <string name="lbl_credit_cards">Credit Cards</string>
    <string name="msg_electric_vehicl">Electric Vehicles</string>
    <string name="lbl_20_000">$20,000</string>
    <string name="lbl_5_80">+5.80%</string>
    <string name="msg_login_your_account">Login your account</string>
    <string name="lbl_total_saving">Total Saving</string>
    <string name="lbl_80_000">$80,000</string>
    <string name="msg_permanent_addre">Permanent Address</string>
    <string name="lbl_10_days_ago">10 days ago</string>
    <string name="msg_gmt_12_00_int">(GMT-12:00) International Date Line West</string>
    <string name="lbl_150">-$150</string>
    <string name="lbl_1085">$1085</string>
    <string name="lbl_investments">Investments</string>
    <string name="lbl_usa">USA</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_5_400">+$5,400</string>
    <string name="lbl_usd">USD</string>
    <string name="lbl_nokia">Nokia</string>
    <string name="lbl_repay">Repay</string>
    <string name="lbl_view_details">View Details</string>
    <string name="lbl_transactions">Transactions</string>
    <string name="msg_san_jose_calif">San Jose, California, USA</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_300">300</string>
    <string name="msg_confirm_password">Confirm Password</string>
    <string name="lbl_loan_money">Loan Money</string>
    <string name="lbl_780">+$780</string>
    <string name="msg_3778">3778 **** **** 1234</string>
    <string name="lbl_5_756">$5,756</string>
    <string name="msg_yearly_total_in">Yearly Total Investment</string>
    <string name="lbl_35_others">35%
Others</string>
    <string name="lbl_card_holder">CARD HOLDER</string>
    <string name="msg_credit_card_gen">Credit Card generally means a plastic card issued by Scheduled Commercial Banks assigned to a Cardholder, with a credit limit, that can be used to purchase goods and services on credit or obtain cash advances.</string>
    <string name="lbl_create_new">Create New </string>
    <string name="lbl_150_000">$150,000</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_25_january_2025">25 January 2025</string>
    <string name="lbl_accounts">Accounts</string>
    <string name="lbl_expense">Expense</string>
    <string name="lbl_balance_history">Balance History</string>
    <string name="lbl_my_cards">My Cards</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_email_id">Email Id</string>
    <string name="msg_current_passwor">Current Password</string>
    <string name="msg_last_transactio">Last Transaction</string>
    <string name="lbl_25_january_2021">25 January 2021</string>
    <string name="lbl_card_list">Card List</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_525_50">525.50</string>
    <string name="lbl_5_500">$5,500</string>
    <string name="lbl_750_000">$750,000</string>
    <string name="lbl_my_expense">My Expense</string>
    <string name="lbl_sl_no">SL No</string>
    <string name="lbl_registers">Registers</string>
    <string name="msg_unlimited_prote">Unlimited protection</string>
    <string name="lbl_currency">Currency</string>
    <string name="lbl_400">400</string>
    <string name="lbl_520">$520</string>
    <string name="lbl_3_460">$3,460</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_2021">2021</string>
    <string name="lbl_2020">2020</string>
    <string name="lbl_firstbank">FirstBank</string>
    <string name="lbl_100_000">$100,000</string>
    <string name="lbl_card_type">Card Type</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_bank">Bank</string>
</resources>