<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listbalance2RowModel" type="com.digitalbanking.app.modules.creditcards.data.model.Listbalance2RowModel"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearCard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStyleindigo_600cornerRadius">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowbalance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnbalance"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBalance"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listbalance2RowModel.txtBalance}"
                    style="@style/txtInterregular11" tools:text="@string/lbl_balance"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listbalance2RowModel.txtPrice}"
                    style="@style/txtInterregular16" tools:text="@string/lbl_5_756"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageChipCard"
                android:layout_height="@dimen/_29pxh"
                android:layout_width="@dimen/_29pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_chipcard"
                tools:ignore="ContentDescription" tools:src="@drawable/img_chipcard"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowcardholder"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumncardholder"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCARDHOLDER"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listbalance2RowModel.txtCARDHOLDER}"
                    style="@style/txtInterregular10" tools:text="@string/lbl_card_holder"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCardholdervalue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listbalance2RowModel.txtCardholdervalue}"
                    style="@style/txtInterregular13" tools:text="@string/lbl_eddy_cusuma"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearNumberDayMonth"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVALIDTHRU"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listbalance2RowModel.txtVALIDTHRU}"
                    style="@style/txtInterregular10" tools:text="@string/lbl_valid_thru"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtValidthruvalue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listbalance2RowModel.txtValidthruvalue}"
                    style="@style/txtInterregular13" tools:text="@string/lbl_12_22"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowcardnumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_17pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_15pxv" style="@style/groupStylecornerRadius_1">
            <TextView android:ellipsize="end" android:gravity="top"
                android:id="@+id/txtCardnumber"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listbalance2RowModel.txtCardnumber}"
                style="@style/txtInterregular15" tools:text="@string/msg_3778"/>
            <ImageView android:id="@+id/imageContrast"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_18pxh"
                android:layout_width="@dimen/_27pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_contrast"
                tools:ignore="ContentDescription" tools:src="@drawable/img_contrast"/>
        </LinearLayout>
    </LinearLayout>
</layout>
