<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.digitalbanking.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_13pxv"
        android:paddingEnd="@dimen/_16pxh"
        android:paddingStart="@dimen/_16pxh"
        android:paddingTop="@dimen/_13pxv" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_24pxh"
            android:layout_width="@dimen/_24pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft_indigo_600"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_indigo_600"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcometoFirstBank"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtWelcometoFirstBank}"
            style="@style/txtIntersemibold28" tools:text="@string/msg_welcome_to_firstbank"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLoginyouraccount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLoginyouraccount}"
            style="@style/txtIntermedium14" tools:text="@string/msg_login_your_account"/>
        <EditText
            android:background="@drawable/rectangle_bg_indigo_600_14_radius_15"
            android:ellipsize="end" android:fontFamily="@font/inter"
            android:hint="@string/lbl_email_id"
            android:id="@+id/etEmailid" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_16pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etEmailidValue}"
            android:textColor="@color/blue_gray_400"
            android:textColorHint="@color/blue_gray_400"
            android:textFontWeight="500"
            android:textSize="@dimen/_16pxh" android:textStyle="bold" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_indigo_600_14_radius_15"
            android:drawableEnd="@drawable/img_checkmark_blue_gray_400"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:fontFamily="@font/inter"
            android:hint="@string/lbl_password"
            android:id="@+id/etPassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_20pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etPasswordValue}"
            android:textColor="@color/blue_gray_400"
            android:textColorHint="@color/blue_gray_400"
            android:textFontWeight="500"
            android:textSize="@dimen/_16pxh" android:textStyle="bold" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgotPassword}"
            style="@style/txtIntermedium16" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/rectangle_bg_indigo_600_radius_25"
            android:ellipsize="end" android:fontFamily="@font/inter"
            android:gravity="center" android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_145pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_log_in2"
            android:textAllCaps="false"
            android:textColor="@color/white_A700"
            android:textFontWeight="400"
            android:textSize="@dimen/_18pxh" android:textStyle="normal" tools:text="@string/lbl_log_in2"/>
    </LinearLayout>
</layout>
