<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="newPasswordVM" type="com.digitalbanking.app.modules.newpassword.data.viewmodel.NewPasswordVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearNewPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_13pxv"
        android:paddingEnd="@dimen/_16pxh"
        android:paddingStart="@dimen/_16pxh"
        android:paddingTop="@dimen/_13pxv" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_24pxh"
            android:layout_width="@dimen/_24pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft_indigo_600"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_indigo_600"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreateNewPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{newPasswordVM.newPasswordModel.txtCreateNewPassword}"
            style="@style/txtInterbold28" tools:text="@string/msg_create_new_password"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreateyournew"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{newPasswordVM.newPasswordModel.txtCreateyournew}"
            style="@style/txtIntermedium14" tools:text="@string/msg_create_your_new"/>
        <EditText
            android:background="@drawable/rectangle_bg_indigo_600_14_radius_15"
            android:drawableEnd="@drawable/img_checkmark_blue_gray_400"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:fontFamily="@font/inter"
            android:hint="@string/lbl_new_password"
            android:id="@+id/etNewpassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_20pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={newPasswordVM.newPasswordModel.etNewpasswordValue}"
            android:textColor="@color/blue_gray_400"
            android:textColorHint="@color/blue_gray_400"
            android:textFontWeight="500"
            android:textSize="@dimen/_16pxh" android:textStyle="bold" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_indigo_600_14_radius_15"
            android:drawableEnd="@drawable/img_checkmark_blue_gray_400"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:fontFamily="@font/inter"
            android:hint="@string/msg_confirm_password"
            android:id="@+id/etConfirmpassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_20pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={newPasswordVM.newPasswordModel.etConfirmpasswordValue}"
            android:textColor="@color/blue_gray_400"
            android:textColorHint="@color/blue_gray_400"
            android:textFontWeight="500"
            android:textSize="@dimen/_16pxh" android:textStyle="bold" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFrameTwentyEight"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_103pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@{newPasswordVM.newPasswordModel.txtFrameTwentyEight}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_reset_password"/>
    </LinearLayout>
</layout>
